# DavisandShirtliff-1000-eyes

./: .env.example  .eslintrc.js  .gitignore  .prettierignore  PROJECT_REPORT.md  README.md  dev-server.mjs  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
.kiro/specs/dayliff-1000-eyes/: .config.kiro  design.md  requirements.md  tasks.md
Css/: main.css
Html/: index.html
JS/: app.js
apps/api/: Dockerfile  drizzle.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/api/src/: app.ts  index.ts
apps/api/src/config/: env.ts  logger.ts  redis.ts
apps/api/src/db/: client.ts  migrate.ts
apps/api/src/lib/: scope.helpers.ts
apps/api/src/middleware/: auth.middleware.ts  rbac.middleware.ts
apps/api/src/queues/: index.ts  queues.ts
apps/api/src/routes/: admin.routes.ts  ai.routes.ts  alerts.routes.ts  analytics.routes.ts  auth.routes.ts  dashboard.routes.ts  events.routes.ts  requests.routes.ts  sla.routes.ts  timeline.routes.ts
apps/api/src/services/: ai-engine.service.ts  alert.service.ts  analytics.service.ts  audit.service.ts  auth.service.ts  event-processor.service.ts  hmac.service.ts  realtime-broadcaster.service.ts  requests.service.ts  sla-monitor.service.ts  timeline.service.ts
apps/ml/: Dockerfile  main.py  pyproject.toml
apps/ml/app/: __init__.py  api.py
apps/ml/app/ml/: model.py  predictor.py
apps/ml/app/routers/: health.py  predict.py
apps/ml/tests/: test_predictor.py
apps/web/: .env.example  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
infra/postgres/: init.sql
(+57 files in other folders)
