[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dayliff-ml"
version = "1.0.0"
description = "Dayliff 1000 Eyes — ML Prediction Microservice"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.1",
    "uvicorn[standard]==0.30.3",
    "pydantic==2.8.2",
    "scikit-learn==1.5.1",
    "xgboost==2.1.1",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "joblib==1.4.2",
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-asyncio==0.23.8",
    "httpx==0.27.0",
    "hypothesis==6.111.1",
    "ruff==0.5.5",
    "mypy==1.11.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
